Lots of styling stuff.

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestScores.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestScores.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model PagedList.IPagedList<Riipen_SSD.ViewModels.TeamCriteriaScoreVM>
+﻿@model PagedList.IPagedList<Riipen_SSD.ViewModels.TeamCriteriaScoreVM>
 @using PagedList.Mvc;
 <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 <link href="~/Styles/Judge_Participant.css" rel="stylesheet" />
