--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
@@ -63,7 +63,7 @@
         <p>@Html.ActionLink("Get all teams", "Contests", new { contestID = ViewBag.contestId })</p>
     }
 
-    <table class="participant-contest-table">
+    <table class="participant-contest-table" id="contest_Teams_Table">
         <thead>
             <tr>
                 <th>
