Create contest now adds judges to "judge" role.

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
@@ -95,6 +95,7 @@
                     <td>First Name</td>
                     <td>Last Name</td>
                     <td>Email</td>
+                    <td>Website</td>
                 </tr>
             </thead>
             <tbody></tbody>
